2008-01-14  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm (AUTOLOAD): DOM attributes reflecting
	shorthand properties did croak (fixed but still they does not 
	return correct result - they need to be fixed later).

	* Element.pm (query_selector, query_selector_all): Prototypes
	were missing.

2008-01-14  Wakaba  <wakaba@suika.fam.cx>

	* Window.pm (___reset_css): Typo fixed.

2008-01-14  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm: The classes now explicitly implement
	the |CSS2Properties| interface.
	(@{}, TIEARRAY, FETCH, FETCHSIZE, EXISTS, item, length): Implemented.

2008-01-14  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm (attributes reflecting CSS properties): 
	Return an empty string if no value is assigned to the property.  Insert
	a SPACE before '!' for compatibility with Firefox.

2008-01-14  Wakaba  <wakaba@suika.fam.cx>

	* CSSRule.pm (css_text): Trailing newline character is removed
	to avoid double empty lines in CSSStyleSheet->css_text.
	(selector_text): Namespace support is fixed.

	* CSSStyleSheet.pm (___new): Now it accepts |_nsmap| option.

2008-01-14  Wakaba  <wakaba@suika.fam.cx>

	* CSSRule.pm (selector_text): Use |serialize_selector_text|
	to get better result.

2008-01-13  Wakaba  <wakaba@suika.fam.cx>

	* Window.pm: New Perl module.

	* Document.pm (default_view): Implemented.

	* Element.pm (current_style): Implemented.

2008-01-06  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm (css_text): Allow to shorten a complete
	set of longhand properties.
	(get_property_priority): Implemented.
	(CSSComputedStyleDeclaration AUTOLOAD): Implemented for reflecting
	attributes.

2008-01-04  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm (css_text): Allow |{compute_multiple}|
	as well as |{compute}| as a way to filter out longhand
	properties.  Sort properties by names for readability.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm (css_text): Output |undef| property