@@ -1,3 +1,10 @@
+2008-01-24  Wakaba  <wakaba@suika.fam.cx>
+
+	* Window.pm (manakai_get_computed_style): Renamed
+	from |get_computed_style|.
+
+	* Element.pm (manakai_computed_style): Renamed from |current_style|.
+
 2008-01-14  Wakaba  <wakaba@suika.fam.cx>
 
 	* CSSStyleDeclaration.pm (AUTOLOAD): DOM attributes reflecting
